<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_welcome"
            android:text="@string/text_welcome"
            android:textSize="28sp"
            android:layout_marginTop="15dp"
            android:paddingLeft="20dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_kg"
            android:text="@string/text_kg"
            android:textSize="20sp"
            android:layout_marginTop="15dp"
            android:paddingLeft="20dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/edit_weight"
                android:hint="@string/text_weight"
                android:ems="10"
                android:background="@drawable/weight"
                android:layout_marginTop="15dp"
                android:paddingLeft="20dp"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_meters"
            android:text="@string/text_meters"
            android:textSize="20sp"
            android:layout_marginTop="15dp"
            android:paddingLeft="20dp"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit_height"
            android:hint="@string/text_height"
            android:ems="10"
            android:background="@drawable/height"
            android:layout_marginTop="15dp"
            android:paddingLeft="20dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_calculate"
            android:text="@string/button_calculate"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>